--- a/Python/1. Wprowadzenie.md
+++ b/Python/1. Wprowadzenie.md
@@ -1,15 +1,16 @@
 ### 1.1 Informacje o języku
-...
+test 123
 
-### 1.2 Przygotowanie środowiska
-...
+test 3453
+
+### 1.2 Instalacja środowiska
+test 6655
+
+test 3545309
 
 ### 1.3 PyCharm - utworzenie projektu
 ...
-
 ### 1.4 PyCharm - elementy IDE
 ...
-
 ### 1.5 Jupyter Notebook
 ...
-
