Just another update

--- a/Python od podstaw/12. Pozostałe zagadnienia.md
+++ b/Python od podstaw/12. Pozostałe zagadnienia.md
@@ -1,10 +1,10 @@
-### 12.1 Rekurencja
+### 12.1 Data i czas
 ...
 
-### 12.2 Generatory
+### 12.2 Rekurencja
 ...
 
-### 12.3 Doctesty
+### 12.3 Generatory
 ...
 
 ### 12.4 Logowanie
