--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -1,8 +1,40 @@
 ### 2.1 Definiowanie zmiennych
-test 12121200
+Aby przechować określoną wartość w pamięci komputera należy utworzyć obiekt nazywany zmienną. Zmienna to wydzielone w pamięci komputera miejsce, które przechowuje określoną wartość i do którego odwołujemy się poprzez jej nazwę. Zmienna może być m.in. typu tekstowego, liczbowego (liczba całkowita lub niecałkowita) czy logicznego. Ponieważ **Python jest językiem programowania typowanym dynamicznie**, nie trzeba deklarować typu zmiennej podczas jej definiowania.
 
-test 34530099
+>Kiedy do tej samej zmiennej przypiszemy nową wartość, stara wartość zostaje zapomniana.
 
+Przykłady definiowania zmiennych:
+```python
+character_class = "zombie"
+```
+
+```python
+character_class = 'human'
+```
+
+```python
+character_id = 4
+```
+
+```python
+x_position = 6.27
+y_position = -12.48
+```
+
+```python
+is_alive = True
+```
+
+```python
+no_value = None
+```
+
+**Podsumowanie:**
+- Do utworzenia zmiennej potrzebne są: **nazwa zmiennej, znak równości oraz wartość zmiennej**. Nie musimy deklarować jej typu. Wynika to z tego, że Python jest językiem typowanym dynamicznie
+- Nazwa zmiennej może zawierać tylko litery, cyfry oraz znak _ . Nie może zaczynać się od cyfry
+- Aby utworzyć zmienną typu tekstowego (string) należy podać wartość w pojedynczych albo podwójnych cudzysłowach
+- Separatorem dziesiętnym w liczbach niecałkowitych jest kropka
+- Istnieje specjalny rodzaj zmiennej służący do przechowywania braku wartości - **None**
 ### 2.2 Funkcje wbudowane
 test 6655
 
