--- a/Python od podstaw/10. Programowanie obiektowe.md
+++ b/Python od podstaw/10. Programowanie obiektowe.md
@@ -1,10 +1,10 @@
 ### 10.1 Klasa oraz obiekt
 ...
 
-### 10.2 Definicja klasy, konstruktor
+### 10.2 Definicja klasy, konstruktor, atrybuty
 ...
 
-### 10.3 Atrybuty i metody
+### 10.3 Metody
 ...
 
 ### 10.4 staticmethod, classmethod
