--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -38,9 +38,29 @@ no_value = None
 - Separatorem dziesiętnym w liczbach niecałkowitych jest kropka
 - Istnieje specjalny rodzaj zmiennej służący do przechowywania braku wartości - **None**
 ### 2.2 Funkcje wbudowane
-test 6655
+Funkcja to kawałek programu, który wykonuje określone zadanie. Mogą być one pisane samodzielnie, ale istnieje również szereg funkcji wbudowanych, które są do dyspozycji w tzw. bibliotece standardowej, to znaczy są elemente języka. 
 
-test 3545309
+Kilka przykładowych funkcji wbudowanych to:
+#### `print`
+Służy to wyświetlenia na ekranie określonej wartości, np. przechowywanej w zmiennej
+
+```python
+print(character_class)
+```
+
+```python
+print(character_id)
+```
+
+```python
+print(1)
+print(2)
+print(3)
+```
+
+
+#### `len`
+Służy do sprawdzenia długości obiektów, które są sentencjami. Przykładem takiego obiektu jest zmienna tekstowa (string) oraz różnego rodzaju [[3. Struktury danych|struktury danych]].
 
 ### 2.3 Typy
 ...
