--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -60,7 +60,7 @@ print(3)
 
 
 #### `len`
-Służy do sprawdzenia długości obiektów, które są sentencjami. Przykładem takiego obiektu jest zmienna tekstowa (string) oraz różnego rodzaju [[Python od podstaw/3. Struktury danych|struktury danych]].
+Służy do sprawdzenia długości obiektów, które są sentencjami. Przykładem takiego obiektu jest zmienna tekstowa (string) oraz różnego rodzaju [[3. Struktury danych]].
 
 ### 2.3 Typy
 ...
