Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -41,7 +41,7 @@ no_value = None
 Funkcja to kawałek programu, który wykonuje określone zadanie. Mogą być one pisane samodzielnie, ale istnieje również szereg funkcji wbudowanych, które są do dyspozycji w tzw. bibliotece standardowej, to znaczy są elemente języka. 
 
 Kilka przykładowych funkcji wbudowanych to:
-#### `print`
+#### 5.6 `print`
 Służy to wyświetlenia na ekranie określonej wartości, np. przechowywanej w zmiennej
 
 ```python
@@ -59,8 +59,8 @@ print(3)
 ```
 
 
-#### `len`
-Służy do sprawdzenia długości obiektów, które są sentencjami. Przykładem takiego obiektu jest zmienna tekstowa (string) oraz różnego rodzaju [[3. Struktury danych|struktury danych]]. Test [[3. Struktury danych#3.2 tuple|tupli]] 
+#### 5.6 `len`
+Służy do sprawdzenia długości obiektów, które są sentencjami. Przykładem takiego obiektu jest zmienna tekstowa (string) oraz różnego rodzaju [[3. Struktury danych|struktury danych]]. Test [[3. Struktury danych#3.2 tuple|tupli]] .
 
 ### 2.3 Typy
 ...
