Just another update

--- a/Analiza danych/1. Wprowadzenie.md
+++ b/Analiza danych/1. Wprowadzenie.md
@@ -5,10 +5,13 @@ asastest 3453
 
 ---
 ---
-### 1.2 Jupyter Notebook
+---
+&nbsp;&nbsp;### 1.2 Jupyter Notebook
 ttttest 6655
 
 testtttt 3545309
 
 ---
 ---
+---
+&nbsp;&nbsp;
