--- a/Analiza danych/10. Matplotlib - stylowanie wykresów.md
+++ b/Analiza danych/10. Matplotlib - stylowanie wykresów.md
@@ -3,33 +3,41 @@
 
 ---
 ---
-### 10.2 Opisy osi oraz tytuł wykresu
+---
+&nbsp;&nbsp;### 10.2 Opisy osi oraz tytuł wykresu
 ...
 
 ---
 ---
-### 10.3 Ticki
+---
+&nbsp;&nbsp;### 10.3 Ticki
 ...
 
 ---
 ---
-### 10.4 Legenda i siatka
+---
+&nbsp;&nbsp;### 10.4 Legenda i siatka
 ...
 
 ---
 ---
-### 10.5 Podwykresy
+---
+&nbsp;&nbsp;### 10.5 Podwykresy
 ...
 
 ---
 ---
-### 10.6 Zapis do pliku
+---
+&nbsp;&nbsp;### 10.6 Zapis do pliku
 ...
 
 ---
 ---
-### 10.7 Colorbar
+---
+&nbsp;&nbsp;### 10.7 Colorbar
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
