--- a/Analiza danych/11. Matplotlib - zaawansowane stylowanie wykresów.md
+++ b/Analiza danych/11. Matplotlib - zaawansowane stylowanie wykresów.md
@@ -3,13 +3,17 @@
 
 ---
 ---
-### 11.2 Dwie osie pionowe
+---
+&nbsp;&nbsp;### 11.2 Dwie osie pionowe
 ...
 
 ---
 ---
-### 11.3 Współdzielenie osi
+---
+&nbsp;&nbsp;### 11.3 Współdzielenie osi
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
