--- a/Analiza danych/3. Numpy - operacje matematyczne.md
+++ b/Analiza danych/3. Numpy - operacje matematyczne.md
@@ -3,18 +3,23 @@
 
 ---
 ---
-### 3.2 Operacje logiczne
+---
+&nbsp;&nbsp;### 3.2 Operacje logiczne
 ...
 
 ---
 ---
-### 3.3 Algebra liniowa
+---
+&nbsp;&nbsp;### 3.3 Algebra liniowa
 ...
 
 ---
 ---
-### 3.4 Funkcje agregujące
+---
+&nbsp;&nbsp;### 3.4 Funkcje agregujące
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
