--- a/Analiza danych/4. Numpy - pozostałe zagadnienia.md
+++ b/Analiza danych/4. Numpy - pozostałe zagadnienia.md
@@ -3,23 +3,29 @@
 
 ---
 ---
-### 4.2 Kopiowanie tablic
+---
+&nbsp;&nbsp;### 4.2 Kopiowanie tablic
 ...
 
 ---
 ---
-### 4.3 Obroty tablic i wyciąganie przekątnej
+---
+&nbsp;&nbsp;### 4.3 Obroty tablic i wyciąganie przekątnej
 ...
 
 ---
 ---
-### 4.4 Łączenie tablic
+---
+&nbsp;&nbsp;### 4.4 Łączenie tablic
 ...
 
 ---
 ---
-### 4.5 Liczby pseudolosowe
+---
+&nbsp;&nbsp;### 4.5 Liczby pseudolosowe
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
