--- a/Analiza danych/8. Pandas - pozostałe operacje.md
+++ b/Analiza danych/8. Pandas - pozostałe operacje.md
@@ -3,28 +3,35 @@
 
 ---
 ---
-### 8.2 Łączenie tabel
+---
+&nbsp;&nbsp;### 8.2 Łączenie tabel
 ...
 
 ---
 ---
-### 8.3 Wczytywanie dużych zbiorów danych
+---
+&nbsp;&nbsp;### 8.3 Wczytywanie dużych zbiorów danych
 ...
 
 ---
 ---
-### 8.4 Indeks hierarchiczny
+---
+&nbsp;&nbsp;### 8.4 Indeks hierarchiczny
 ...
 
 ---
 ---
-### 8.5 Data i czas
+---
+&nbsp;&nbsp;### 8.5 Data i czas
 ...
 
 ---
 ---
-### 8.6 Wybrane pozostałe funkcje
+---
+&nbsp;&nbsp;### 8.6 Wybrane pozostałe funkcje
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
