--- a/Analiza danych/9. Matplotlib - typy wykresów.md
+++ b/Analiza danych/9. Matplotlib - typy wykresów.md
@@ -3,23 +3,29 @@
 
 ---
 ---
-### 9.2 Wykres liniowy
+---
+&nbsp;&nbsp;### 9.2 Wykres liniowy
 ...
 
 ---
 ---
-### 9.3 Wykres słupkowy
+---
+&nbsp;&nbsp;### 9.3 Wykres słupkowy
 ...
 
 ---
 ---
-### 9.4 Histogram
+---
+&nbsp;&nbsp;### 9.4 Histogram
 ...
 
 ---
 ---
-### 9.5 Heatmapa
+---
+&nbsp;&nbsp;### 9.5 Heatmapa
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
