--- a/Python od podstaw/10. Programowanie obiektowe.md
+++ b/Python od podstaw/10. Programowanie obiektowe.md
@@ -3,28 +3,35 @@
 
 ---
 ---
-### 10.2 Definicja klasy, konstruktor, atrybuty
+---
+&nbsp;&nbsp;### 10.2 Definicja klasy, konstruktor, atrybuty
 ...
 
 ---
 ---
-### 10.3 Metody
+---
+&nbsp;&nbsp;### 10.3 Metody
 ...
 
 ---
 ---
-### 10.4 staticmethod, classmethod
+---
+&nbsp;&nbsp;### 10.4 staticmethod, classmethod
 ...
 
 ---
 ---
-### 10.5 Dziedziczenie
+---
+&nbsp;&nbsp;### 10.5 Dziedziczenie
 ...
 
 ---
 ---
-### 10.6 Stringifikacja
+---
+&nbsp;&nbsp;### 10.6 Stringifikacja
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
