--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -39,7 +39,8 @@ no_value = None
 - Istnieje specjalny rodzaj zmiennej służący do przechowywania braku wartości - **None**
 ---
 ---
-### 2.2 Funkcje wbudowane
+---
+&nbsp;&nbsp;### 2.2 Funkcje wbudowane
 Funkcja to kawałek programu, który wykonuje określone zadanie. Mogą być one pisane samodzielnie, ale istnieje również szereg funkcji wbudowanych, które są do dyspozycji w tzw. bibliotece standardowej, to znaczy są elemente języka. 
 
 Kilka przykładowych funkcji wbudowanych to:
@@ -66,28 +67,35 @@ Służy do sprawdzenia długości obiektów, które są sentencjami. Przykładem
 
 ---
 ---
-### 2.3 Typy
+---
+&nbsp;&nbsp;### 2.3 Typy
 ...
 
 ---
 ---
-### 2.4 Operacje arytmetyczne
+---
+&nbsp;&nbsp;### 2.4 Operacje arytmetyczne
 ...
 
 ---
 ---
-### 2.5 Operacje na stringach
+---
+&nbsp;&nbsp;### 2.5 Operacje na stringach
 ...
 
 ---
 ---
-### 2.6 Komentarze
+---
+&nbsp;&nbsp;### 2.6 Komentarze
 ...
 
 ---
 ---
-### 2.7 Funkcja input()
+---
+&nbsp;&nbsp;### 2.7 Funkcja input()
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
