--- a/Python od podstaw/3. Struktury danych.md
+++ b/Python od podstaw/3. Struktury danych.md
@@ -3,43 +3,53 @@
 
 ---
 ---
-### 3.2 tuple
+---
+&nbsp;&nbsp;### 3.2 tuple
 ...
 
 ---
 ---
-### 3.3 dict
+---
+&nbsp;&nbsp;### 3.3 dict
 ...
 
 ---
 ---
-### 3.4 set
+---
+&nbsp;&nbsp;### 3.4 set
 ...
 
 ---
 ---
-### 3.5 Operacje na strukturach danych
+---
+&nbsp;&nbsp;### 3.5 Operacje na strukturach danych
 ...
 
 ---
 ---
-### 3.6 Slicing
+---
+&nbsp;&nbsp;### 3.6 Slicing
 ...
 
 ---
 ---
-### 3.7 Zagnieżdżone struktury
+---
+&nbsp;&nbsp;### 3.7 Zagnieżdżone struktury
 ...
 
 ---
 ---
-### 3.8 Wbudowane generatory cz. 1
+---
+&nbsp;&nbsp;### 3.8 Wbudowane generatory cz. 1
 ...
 
 ---
 ---
-### 3.9 Mutowalność, hashowalność i kopiowanie obiektów
+---
+&nbsp;&nbsp;### 3.9 Mutowalność, hashowalność i kopiowanie obiektów
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
