--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -3,23 +3,29 @@
 
 ---
 ---
-### 4.2 Spójniki logiczne
+---
+&nbsp;&nbsp;### 4.2 Spójniki logiczne
 ...
 
 ---
 ---
-### 4.3 Instrukcja if
+---
+&nbsp;&nbsp;### 4.3 Instrukcja if
 ...
 
 ---
 ---
-### 4.4 Instrukcja if-else
+---
+&nbsp;&nbsp;### 4.4 Instrukcja if-else
 ...
 
 ---
 ---
-### 4.5 Instrukcja if-elif-(else)
+---
+&nbsp;&nbsp;### 4.5 Instrukcja if-elif-(else)
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
