--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -3,53 +3,65 @@
 
 ---
 ---
-### 6.2 Argumenty funkcji
+---
+&nbsp;&nbsp;### 6.2 Argumenty funkcji
 ...
 
 ---
 ---
-### 6.3 Słowo kluczowe return
+---
+&nbsp;&nbsp;### 6.3 Słowo kluczowe return
 ...
 
 ---
 ---
-### 6.4 Argumenty z wartością domyślną
+---
+&nbsp;&nbsp;### 6.4 Argumenty z wartością domyślną
 ...
 
 ---
 ---
-### 6.5 Kolejność argumentów
+---
+&nbsp;&nbsp;### 6.5 Kolejność argumentów
 ...
 
 ---
 ---
-### 6.6 Wbudowane generatory cz. 2
+---
+&nbsp;&nbsp;### 6.6 Wbudowane generatory cz. 2
 ...
 
 ---
 ---
-### 6.7 lambda
+---
+&nbsp;&nbsp;### 6.7 lambda
 ...
 
 ---
 ---
-### 6.8 argument unpacking
+---
+&nbsp;&nbsp;### 6.8 argument unpacking
 ...
 
 ---
 ---
-### 6.9 args, kwargs
+---
+&nbsp;&nbsp;### 6.9 args, kwargs
 ...
 
 ---
 ---
-### 6.10 Docstring i doctest
+---
+&nbsp;&nbsp;### 6.10 Docstring i doctest
 ...
 
 ---
 ---
-### 6.11 Zakres przestrzeni nazw
+---
+&nbsp;&nbsp;### 6.11 Zakres przestrzeni nazw
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
