--- a/Python od podstaw/9. Praca z plikami.md
+++ b/Python od podstaw/9. Praca z plikami.md
@@ -3,18 +3,23 @@
 
 ---
 ---
-### 9.2 Pliki json
+---
+&nbsp;&nbsp;### 9.2 Pliki json
 ...
 
 ---
 ---
-### 9.3 pickle
+---
+&nbsp;&nbsp;### 9.3 pickle
 ...
 
 ---
 ---
-### 9.4 Biblioteka os
+---
+&nbsp;&nbsp;### 9.4 Biblioteka os
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
