--- a/Analiza danych/2. Numpy - tablice.md
+++ b/Analiza danych/2. Numpy - tablice.md
@@ -3,43 +3,53 @@
 
 ---
 ---
-### 2.2 Zapis i odczyt tablic z pliku
+---
+&nbsp;&nbsp;### 2.2 Zapis i odczyt tablic z pliku
 ...
 
 ---
 ---
-### 2.3 Kształt oraz wymiar tablicy
+---
+&nbsp;&nbsp;### 2.3 Kształt oraz wymiar tablicy
 ...
 
 ---
 ---
-### 2.4 Typy danych w tablicach
+---
+&nbsp;&nbsp;### 2.4 Typy danych w tablicach
 ...
 
 ---
 ---
-### 2.5 Rozmiar tablicy
+---
+&nbsp;&nbsp;### 2.5 Rozmiar tablicy
 ...
 
 ---
 ---
-### 2.6 Slicing
+---
+&nbsp;&nbsp;### 2.6 Slicing
 ...
 
 ---
 ---
-### 2.7 Slicing z użyciem warunków logicznych
+---
+&nbsp;&nbsp;### 2.7 Slicing z użyciem warunków logicznych
 ...
 
 ---
 ---
-### 2.8 Zmiana kształtu tablicy
+---
+&nbsp;&nbsp;### 2.8 Zmiana kształtu tablicy
 ...
 
 ---
 ---
-### 2.9 Sortowanie
+---
+&nbsp;&nbsp;### 2.9 Sortowanie
 ...
 
 ---
 ---
+---
+&nbsp;&nbsp;
