Just another update

--- a/Analiza danych/1. Wprowadzenie.md
+++ b/Analiza danych/1. Wprowadzenie.md
@@ -6,7 +6,9 @@ asastest 3453
 ---
 ---
 ---
-&nbsp;&nbsp;### 1.2 Jupyter Notebook
+&nbsp;
+&nbsp;
+### 1.2 Jupyter Notebook
 ttttest 6655
 
 testtttt 3545309
@@ -14,4 +16,5 @@ testtttt 3545309
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
