--- a/Analiza danych/10. Matplotlib - stylowanie wykresów.md
+++ b/Analiza danych/10. Matplotlib - stylowanie wykresów.md
@@ -4,40 +4,53 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 10.2 Opisy osi oraz tytuł wykresu
+&nbsp;
+&nbsp;
+### 10.2 Opisy osi oraz tytuł wykresu
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 10.3 Ticki
+&nbsp;
+&nbsp;
+### 10.3 Ticki
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 10.4 Legenda i siatka
+&nbsp;
+&nbsp;
+### 10.4 Legenda i siatka
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 10.5 Podwykresy
+&nbsp;
+&nbsp;
+### 10.5 Podwykresy
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 10.6 Zapis do pliku
+&nbsp;
+&nbsp;
+### 10.6 Zapis do pliku
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 10.7 Colorbar
+&nbsp;
+&nbsp;
+### 10.7 Colorbar
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
