--- a/Analiza danych/2. Numpy - tablice.md
+++ b/Analiza danych/2. Numpy - tablice.md
@@ -4,52 +4,69 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.2 Zapis i odczyt tablic z pliku
+&nbsp;
+&nbsp;
+### 2.2 Zapis i odczyt tablic z pliku
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.3 Kształt oraz wymiar tablicy
+&nbsp;
+&nbsp;
+### 2.3 Kształt oraz wymiar tablicy
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.4 Typy danych w tablicach
+&nbsp;
+&nbsp;
+### 2.4 Typy danych w tablicach
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.5 Rozmiar tablicy
+&nbsp;
+&nbsp;
+### 2.5 Rozmiar tablicy
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.6 Slicing
+&nbsp;
+&nbsp;
+### 2.6 Slicing
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.7 Slicing z użyciem warunków logicznych
+&nbsp;
+&nbsp;
+### 2.7 Slicing z użyciem warunków logicznych
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.8 Zmiana kształtu tablicy
+&nbsp;
+&nbsp;
+### 2.8 Zmiana kształtu tablicy
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.9 Sortowanie
+&nbsp;
+&nbsp;
+### 2.9 Sortowanie
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
