--- a/Analiza danych/5. Pandas - series i dataframe.md
+++ b/Analiza danych/5. Pandas - series i dataframe.md
@@ -4,10 +4,13 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 5.2 DataFrame
+&nbsp;
+&nbsp;
+### 5.2 DataFrame
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
