--- a/Analiza danych/6. Pandas - operacje odczytu.md
+++ b/Analiza danych/6. Pandas - operacje odczytu.md
@@ -4,28 +4,37 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 6.2 Wyciąganie kolumn, wierszy, wartości
+&nbsp;
+&nbsp;
+### 6.2 Wyciąganie kolumn, wierszy, wartości
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 6.3 Wartości unikalne
+&nbsp;
+&nbsp;
+### 6.3 Wartości unikalne
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 6.4 Filtrowanie dataframe'a
+&nbsp;
+&nbsp;
+### 6.4 Filtrowanie dataframe'a
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 6.5 Wykresy
+&nbsp;
+&nbsp;
+### 6.5 Wykresy
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
