--- a/Python od podstaw/12. Pozostałe zagadnienia.md
+++ b/Python od podstaw/12. Pozostałe zagadnienia.md
@@ -4,22 +4,29 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 12.2 Rekurencja
+&nbsp;
+&nbsp;
+### 12.2 Rekurencja
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 12.3 Generatory
+&nbsp;
+&nbsp;
+### 12.3 Generatory
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 12.4 Logowanie
+&nbsp;
+&nbsp;
+### 12.4 Logowanie
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
