--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -40,7 +40,9 @@ no_value = None
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.2 Funkcje wbudowane
+&nbsp;
+&nbsp;
+### 2.2 Funkcje wbudowane
 Funkcja to kawałek programu, który wykonuje określone zadanie. Mogą być one pisane samodzielnie, ale istnieje również szereg funkcji wbudowanych, które są do dyspozycji w tzw. bibliotece standardowej, to znaczy są elemente języka. 
 
 Kilka przykładowych funkcji wbudowanych to:
@@ -68,34 +70,45 @@ Służy do sprawdzenia długości obiektów, które są sentencjami. Przykładem
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.3 Typy
+&nbsp;
+&nbsp;
+### 2.3 Typy
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.4 Operacje arytmetyczne
+&nbsp;
+&nbsp;
+### 2.4 Operacje arytmetyczne
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.5 Operacje na stringach
+&nbsp;
+&nbsp;
+### 2.5 Operacje na stringach
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.6 Komentarze
+&nbsp;
+&nbsp;
+### 2.6 Komentarze
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 2.7 Funkcja input()
+&nbsp;
+&nbsp;
+### 2.7 Funkcja input()
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
