--- a/Python od podstaw/4. Instrukcje warunkowe.md
+++ b/Python od podstaw/4. Instrukcje warunkowe.md
@@ -4,28 +4,37 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 4.2 Spójniki logiczne
+&nbsp;
+&nbsp;
+### 4.2 Spójniki logiczne
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 4.3 Instrukcja if
+&nbsp;
+&nbsp;
+### 4.3 Instrukcja if
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 4.4 Instrukcja if-else
+&nbsp;
+&nbsp;
+### 4.4 Instrukcja if-else
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 4.5 Instrukcja if-elif-(else)
+&nbsp;
+&nbsp;
+### 4.5 Instrukcja if-elif-(else)
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
