--- a/Python od podstaw/7. Obsługa błędów i jakość kodu.md
+++ b/Python od podstaw/7. Obsługa błędów i jakość kodu.md
@@ -4,28 +4,37 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 7.2 Type annotations
+&nbsp;
+&nbsp;
+### 7.2 Type annotations
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 7.3 Stack Overflow
+&nbsp;
+&nbsp;
+### 7.3 Stack Overflow
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 7.4 Debugowanie
+&nbsp;
+&nbsp;
+### 7.4 Debugowanie
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 7.5 Wyjątki
+&nbsp;
+&nbsp;
+### 7.5 Wyjątki
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
