--- a/Python od podstaw/8. Moduły.md
+++ b/Python od podstaw/8. Moduły.md
@@ -4,22 +4,29 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 8.2 Przykładowe moduły biblioteki standardowej
+&nbsp;
+&nbsp;
+### 8.2 Przykładowe moduły biblioteki standardowej
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 8.3 Import kodu z innych plików
+&nbsp;
+&nbsp;
+### 8.3 Import kodu z innych plików
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 8.4 Tworzenie własnego modułu
+&nbsp;
+&nbsp;
+### 8.4 Tworzenie własnego modułu
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
