--- a/Python od podstaw/9. Praca z plikami.md
+++ b/Python od podstaw/9. Praca z plikami.md
@@ -4,22 +4,29 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 9.2 Pliki json
+&nbsp;
+&nbsp;
+### 9.2 Pliki json
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 9.3 pickle
+&nbsp;
+&nbsp;
+### 9.3 pickle
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 9.4 Biblioteka os
+&nbsp;
+&nbsp;
+### 9.4 Biblioteka os
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
