--- a/Analiza danych/3. Numpy - operacje matematyczne.md
+++ b/Analiza danych/3. Numpy - operacje matematyczne.md
@@ -4,22 +4,29 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 3.2 Operacje logiczne
+&nbsp;
+&nbsp;
+### 3.2 Operacje logiczne
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 3.3 Algebra liniowa
+&nbsp;
+&nbsp;
+### 3.3 Algebra liniowa
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 3.4 Funkcje agregujące
+&nbsp;
+&nbsp;
+### 3.4 Funkcje agregujące
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
