--- a/Analiza danych/4. Numpy - pozostałe zagadnienia.md
+++ b/Analiza danych/4. Numpy - pozostałe zagadnienia.md
@@ -4,28 +4,37 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 4.2 Kopiowanie tablic
+&nbsp;
+&nbsp;
+### 4.2 Kopiowanie tablic
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 4.3 Obroty tablic i wyciąganie przekątnej
+&nbsp;
+&nbsp;
+### 4.3 Obroty tablic i wyciąganie przekątnej
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 4.4 Łączenie tablic
+&nbsp;
+&nbsp;
+### 4.4 Łączenie tablic
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 4.5 Liczby pseudolosowe
+&nbsp;
+&nbsp;
+### 4.5 Liczby pseudolosowe
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
