--- a/Analiza danych/7. Pandas - operacje zapisu.md
+++ b/Analiza danych/7. Pandas - operacje zapisu.md
@@ -4,28 +4,37 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 7.2 Sortowanie
+&nbsp;
+&nbsp;
+### 7.2 Sortowanie
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 7.3 Tworzenie nowych kolumn
+&nbsp;
+&nbsp;
+### 7.3 Tworzenie nowych kolumn
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 7.4 Operacje na kolumnach
+&nbsp;
+&nbsp;
+### 7.4 Operacje na kolumnach
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 7.5 Dodawanie wierszy
+&nbsp;
+&nbsp;
+### 7.5 Dodawanie wierszy
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
