--- a/Analiza danych/9. Matplotlib - typy wykresów.md
+++ b/Analiza danych/9. Matplotlib - typy wykresów.md
@@ -4,28 +4,37 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 9.2 Wykres liniowy
+&nbsp;
+&nbsp;
+### 9.2 Wykres liniowy
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 9.3 Wykres słupkowy
+&nbsp;
+&nbsp;
+### 9.3 Wykres słupkowy
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 9.4 Histogram
+&nbsp;
+&nbsp;
+### 9.4 Histogram
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 9.5 Heatmapa
+&nbsp;
+&nbsp;
+### 9.5 Heatmapa
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
