--- a/Python od podstaw/1. Wprowadzenie.md
+++ b/Python od podstaw/1. Wprowadzenie.md
@@ -6,7 +6,9 @@ test 3453
 ---
 ---
 ---
-&nbsp;&nbsp;### 1.2 Instalacja środowiska
+&nbsp;
+&nbsp;
+### 1.2 Instalacja środowiska
 test 6655
 
 test 3545309
@@ -14,22 +16,29 @@ test 3545309
 ---
 ---
 ---
-&nbsp;&nbsp;### 1.3 PyCharm - utworzenie projektu
+&nbsp;
+&nbsp;
+### 1.3 PyCharm - utworzenie projektu
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 1.4 PyCharm - elementy IDE
+&nbsp;
+&nbsp;
+### 1.4 PyCharm - elementy IDE
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 1.5 Jupyter Notebook
+&nbsp;
+&nbsp;
+### 1.5 Jupyter Notebook
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
