--- a/Python od podstaw/10. Programowanie obiektowe.md
+++ b/Python od podstaw/10. Programowanie obiektowe.md
@@ -4,34 +4,45 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 10.2 Definicja klasy, konstruktor, atrybuty
+&nbsp;
+&nbsp;
+### 10.2 Definicja klasy, konstruktor, atrybuty
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 10.3 Metody
+&nbsp;
+&nbsp;
+### 10.3 Metody
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 10.4 staticmethod, classmethod
+&nbsp;
+&nbsp;
+### 10.4 staticmethod, classmethod
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 10.5 Dziedziczenie
+&nbsp;
+&nbsp;
+### 10.5 Dziedziczenie
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 10.6 Stringifikacja
+&nbsp;
+&nbsp;
+### 10.6 Stringifikacja
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
