--- a/Python od podstaw/11. Wyrażenia regularne.md
+++ b/Python od podstaw/11. Wyrażenia regularne.md
@@ -4,34 +4,45 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 11.2 Proste patterny
+&nbsp;
+&nbsp;
+### 11.2 Proste patterny
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 11.3 Escape character
+&nbsp;
+&nbsp;
+### 11.3 Escape character
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 11.4 Znaki specjalne
+&nbsp;
+&nbsp;
+### 11.4 Znaki specjalne
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 11.5 Złożone patterny
+&nbsp;
+&nbsp;
+### 11.5 Złożone patterny
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 11.6 Funkcje biblioteki re
+&nbsp;
+&nbsp;
+### 11.6 Funkcje biblioteki re
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
