--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -4,34 +4,45 @@
 ---
 ---
 ---
-&nbsp;&nbsp;### 5.2 Pętla while
+&nbsp;
+&nbsp;
+### 5.2 Pętla while
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 5.3 Instrukcje break oraz continue
+&nbsp;
+&nbsp;
+### 5.3 Instrukcje break oraz continue
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 5.4 Zagnieżdżone pętle
+&nbsp;
+&nbsp;
+### 5.4 Zagnieżdżone pętle
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 5.5 Generatory w pętli for
+&nbsp;
+&nbsp;
+### 5.5 Generatory w pętli for
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;### 5.6 list comprehension
+&nbsp;
+&nbsp;
+### 5.6 list comprehension
 ...
 
 ---
 ---
 ---
-&nbsp;&nbsp;
+&nbsp;
+&nbsp;
