Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -38,14 +38,16 @@ no_value = None
 - Separatorem dziesiętnym w liczbach niecałkowitych jest kropka
 - Istnieje specjalny rodzaj zmiennej służący do przechowywania braku wartości - **None**
 ---
----
+**---**
 ---
 &nbsp;
 ### 2.2 Funkcje wbudowane
-Funkcja to kawałek programu, który wykonuje określone zadanie. Mogą być one pisane samodzielnie, ale istnieje również szereg funkcji wbudowanych, które są do dyspozycji w tzw. bibliotece standardowej, to znaczy są elemente języka. 
+Funkcja to kawałek programu, który wykonuje określone zadanie. Mogą być one pisane przez nas, ale istnieje również szereg funkcji wbudowanych, które są do dyspozycji w tzw. bibliotece standardowej, to znaczy że są one elementami języka. 
+
+Użycie funkcji nazywa się **wywołaniem** (ang. *call*). Poznajemy je po **nawiasach okrągłych**, których obecność w kodzie jednak nie zawsze oznacza że wywołujemy funkcję. Do tych nawiasów możemy ale nie musimy przekazać jeden lub więcej **argument**. Więcej na ten temat znajduje się w [[6. Funkcje|osobnej lekcji]].
 
 Kilka przykładowych funkcji wbudowanych to:
-#### 2.2.1 Funkcja print
+#### 2.2.1 Funkcja `print`
 Służy to wyświetlenia na ekranie określonej wartości, np. przechowywanej w zmiennej
 
 ```python
@@ -63,45 +65,71 @@ print(3)
 ```
 
 
-#### 2.2.2 Funkcja `len`
-Służy do sprawdzenia długości obiektów, które są sentencjami. Przykładem takiego obiektu jest zmienna tekstowa (string) oraz różnego rodzaju [[3. Struktury danych|struktury danych]]. Test [[3. Struktury danych#3.2 tuple|tupli]] .
+#### 2.2.1 Funkcja `len`
+Służy do sprawdzenia długości (liczby elementów) obiektów, które są sekwencjami. Przykładem takiego obiektu jest zmienna tekstowa - czyli łańcuch znaków (ang. *string*) - a także różnego rodzaju [[3. Struktury danych|struktury danych]]. 
 
+```python
+len(character_class)
+```
+
+#### 2.2.1 Funkcja `round`
+Aby zaokrąglić liczbę posiadającą rozwinięcie dziesiętne - taką jak np. 3.1415926... - do określonego miejsca po przecinku używamy funkcji `round`. Domyślnie sprowadza ona daną wartość do liczby całkowitej, ale istnieje możliwość zaokrąglenia z określoną dokładnością, tzn. do podanej liczby miejsc po przecinku. 
+
+```python
+round(3.1415926)
+```
+
+Powyższy kod zwróci liczbę 3.
+
+```python
+round(3.1415926, 2)
+```
+
+Powyższy kod zwróci liczbę 3.14.
+
+**Podsumowanie:**
+- Funkcja to fragment kodu, który wykonuje określone zadanie kiedy zostaje wywołany
+- Python umożliwia pisanie własnych funkcji, ale oferuje również cały szereg funkcji wbudowanych
+- Funkcja `print` służy do wypisania na ekranie przekazanej do niej wartości
+- Funkcja `len` służy do sprawdzenia liczby elementów w obiekcie, który jest sekwencją, np. łańcuchem znaków albo [[3. Struktury danych|strukturą danych]]
+- Funkcja `round` służy do zaokrąglania liczb posiadających rozwinięcie dziesiętne
+- Powyższe 3 funkcje to tylko nieliczne przykłady [wbudowanych funkcji Pythona](https://docs.python.org/3/library/functions.html)
 ---
----
+**---**
 ---
 &nbsp;
 ### 2.3 Typy
 ...
 
 ---
----
+**---**
 ---
 &nbsp;
 ### 2.4 Operacje arytmetyczne
 ...
 
 ---
----
+**---**
 ---
 &nbsp;
 ### 2.5 Operacje na stringach
 ...
 
 ---
----
+**---**
 ---
 &nbsp;
 ### 2.6 Komentarze
 ...
 
 ---
----
+**---**
 ---
 &nbsp;
 ### 2.7 Funkcja input()
 ...
 
 ---
----
+**---**
 ---
 &nbsp;
