Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -31,6 +31,7 @@ is_alive = True
 no_value = None
 ```
 
+---
 **Podsumowanie:**
 - Do utworzenia zmiennej potrzebne są: **nazwa zmiennej, znak równości oraz wartość zmiennej**. Nie musimy deklarować jej typu. Wynika to z tego, że Python jest językiem typowanym dynamicznie
 - Nazwa zmiennej może zawierać tylko litery, cyfry oraz znak _ . Nie może zaczynać się od cyfry
@@ -38,13 +39,13 @@ no_value = None
 - Separatorem dziesiętnym w liczbach niecałkowitych jest kropka
 - Istnieje specjalny rodzaj zmiennej służący do przechowywania braku wartości - **None**
 ---
-**---**
+---
 ---
 &nbsp;
 ### 2.2 Funkcje wbudowane
 Funkcja to kawałek programu, który wykonuje określone zadanie. Mogą być one pisane przez nas, ale istnieje również szereg funkcji wbudowanych, które są do dyspozycji w tzw. bibliotece standardowej, to znaczy że są one elementami języka. 
 
-Użycie funkcji nazywa się **wywołaniem** (ang. *call*). Poznajemy je po **nawiasach okrągłych**, których obecność w kodzie jednak nie zawsze oznacza że wywołujemy funkcję. Do tych nawiasów możemy ale nie musimy przekazać jeden lub więcej **argument**. Więcej na ten temat znajduje się w [[6. Funkcje|osobnej lekcji]].
+Użycie funkcji nazywa się **wywołaniem** (ang. *call*). Poznajemy je po **nawiasach okrągłych**, których obecność w kodzie jednak nie zawsze oznacza że właśnie wywołujemy funkcję. Do tych nawiasów możemy (ale nie musimy) przekazać jeden lub więcej **argument**. Więcej informacji na ten temat znajduje się w [[6. Funkcje|osobnej lekcji]].
 
 Kilka przykładowych funkcji wbudowanych to:
 #### 2.2.1 Funkcja `print`
@@ -79,14 +80,15 @@ Aby zaokrąglić liczbę posiadającą rozwinięcie dziesiętne - taką jak np. 
 round(3.1415926)
 ```
 
-Powyższy kod zwróci liczbę 3.
+Powyższy kod zwróci wartość 3.
 
 ```python
 round(3.1415926, 2)
 ```
 
-Powyższy kod zwróci liczbę 3.14.
+Powyższy kod zwróci wartość 3.14.
 
+---
 **Podsumowanie:**
 - Funkcja to fragment kodu, który wykonuje określone zadanie kiedy zostaje wywołany
 - Python umożliwia pisanie własnych funkcji, ale oferuje również cały szereg funkcji wbudowanych
@@ -95,41 +97,41 @@ Powyższy kod zwróci liczbę 3.14.
 - Funkcja `round` służy do zaokrąglania liczb posiadających rozwinięcie dziesiętne
 - Powyższe 3 funkcje to tylko nieliczne przykłady [wbudowanych funkcji Pythona](https://docs.python.org/3/library/functions.html)
 ---
-**---**
+---
 ---
 &nbsp;
 ### 2.3 Typy
 ...
 
 ---
-**---**
+---
 ---
 &nbsp;
 ### 2.4 Operacje arytmetyczne
 ...
 
 ---
-**---**
+---
 ---
 &nbsp;
 ### 2.5 Operacje na stringach
 ...
 
 ---
-**---**
+---
 ---
 &nbsp;
 ### 2.6 Komentarze
 ...
 
 ---
-**---**
+---
 ---
 &nbsp;
 ### 2.7 Funkcja input()
 ...
 
 ---
-**---**
+---
 ---
 &nbsp;
