Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -49,7 +49,7 @@ Użycie funkcji nazywa się **wywołaniem** (ang. *call*). Poznajemy je po **na
 
 Kilka przykładowych funkcji wbudowanych to:
 #### 2.2.1 Funkcja `print`
-Służy to wyświetlenia na ekranie określonej wartości, np. przechowywanej w zmiennej
+Służy do wyświetlenia na ekranie określonej wartości, np. przechowywanej w zmiennej
 
 ```python
 print(character_class)
@@ -66,14 +66,14 @@ print(3)
 ```
 
 
-#### 2.2.1 Funkcja `len`
+#### 2.2.2 Funkcja `len`
 Służy do sprawdzenia długości (liczby elementów) obiektów, które są sekwencjami. Przykładem takiego obiektu jest zmienna tekstowa - czyli łańcuch znaków (ang. *string*) - a także różnego rodzaju [[3. Struktury danych|struktury danych]]. 
 
 ```python
 len(character_class)
 ```
 
-#### 2.2.1 Funkcja `round`
+#### 2.2.3 Funkcja `round`
 Aby zaokrąglić liczbę posiadającą rozwinięcie dziesiętne - taką jak np. 3.1415926... - do określonego miejsca po przecinku używamy funkcji `round`. Domyślnie sprowadza ona daną wartość do liczby całkowitej, ale istnieje możliwość zaokrąglenia z określoną dokładnością, tzn. do podanej liczby miejsc po przecinku. 
 
 ```python
@@ -90,7 +90,7 @@ Powyższy kod zwróci wartość 3.14.
 
 ---
 **Podsumowanie:**
-- Funkcja to fragment kodu, który wykonuje określone zadanie kiedy zostaje wywołany
+- Funkcja to fragment kodu, który wykonuje określone zadanie podczas jej wywołania
 - Python umożliwia pisanie własnych funkcji, ale oferuje również cały szereg funkcji wbudowanych
 - Funkcja `print` służy do wypisania na ekranie przekazanej do niej wartości
 - Funkcja `len` służy do sprawdzenia liczby elementów w obiekcie, który jest sekwencją, np. łańcuchem znaków albo [[3. Struktury danych|strukturą danych]]
