--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -101,8 +101,65 @@ Powyższy kod zwróci wartość 3.14.
 ---
 &nbsp;
 ### 2.3 Typy
-...
+Każdy obiekt w Pythonie jest obiektem określonego typu. Typ to cecha, która determinuje jakie operacje możemy wykonać na obiekcie i wiąże się z tym jakiego rodzaju dane on zawiera. KIlka najczęściej spotykanych typów to:
+- *string* - czyli łańcuch znaków a więc tekst
+- *int* - czyli liczba całkowita (*integer*)
+- float - liczba zmiennoprzecinkowa (*floating point*) czyli taka, która posiada rozwinięcie dziesiętne
+- bool - wartość logiczna (prawda lub fałsz) od angielskiego *boolean*
 
+Aby sprawdzić jakiego typu jest dany obiekt należy wywołać funkcję `type` przekazując do niej ten obiekt jako argument.
+
+```python
+type(character_class)
+```
+
+```python
+type(character_id)
+```
+
+```python
+type(x_position)
+```
+
+```python
+type(None)
+```
+
+```python
+type(print)
+```
+
+---
+Python pozwala również zamienić obiekt na podobny obiekt ale innego typu. Nazywamy to rzutowaniem typu. Nie zawsze jest to możliwe, ale w pewnych przypadkach owszem. 
+
+Przykładowo:
+```python
+str(4)
+```
+zwróci stringa '4'.
+
+```python
+int(-12.48)
+```
+zwróci inta 12. Rzutowanie typu w tym przypadku polega na ucięciu cyfr po przecinku a nie zaokrągleniu do najbliższej liczby całkowitej.
+
+```python
+float(True)
+```
+zwróci 1.0, ponieważ wartości logicznej *True* odpowiada liczba 1, ale w tym przypadku zamieniamy ją na floata.
+
+Próba rzutowania niektórych typów zakończy się błędem programu. Nie możemy na przykład zrzutować stringa na inta.
+
+```python
+int("zombie")  # to nie zadziała
+```
+
+---
+**Podsumowanie:**
+- Każdy obiekt w Pythonie ma określony typ
+- Aby sprawdzić jaki on jest używamy funkcji `type`
+- Najczęściej spotykane typy zmiennych to: string, int, float, bool
+- Aby zmienić typ obiektu (o ile to możliwe) możemy dokonać **rzutowania** używając nazwy typu jako funkcji
 ---
 ---
 ---
