Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -104,8 +104,8 @@ Powyższy kod zwróci wartość 3.14.
 Każdy obiekt w Pythonie jest obiektem określonego typu. Typ to cecha, która determinuje jakie operacje możemy wykonać na obiekcie i wiąże się z tym jakiego rodzaju dane on zawiera. KIlka najczęściej spotykanych typów to:
 - *string* - czyli łańcuch znaków a więc tekst
 - *int* - czyli liczba całkowita (*integer*)
-- float - liczba zmiennoprzecinkowa (*floating point*) czyli taka, która posiada rozwinięcie dziesiętne
-- bool - wartość logiczna (prawda lub fałsz) od angielskiego *boolean*
+- *float* - liczba zmiennoprzecinkowa (*floating point*) czyli taka, która posiada rozwinięcie dziesiętne
+- *bool* - wartość logiczna (prawda lub fałsz) od angielskiego *boolean*
 
 Aby sprawdzić jakiego typu jest dany obiekt należy wywołać funkcję `type` przekazując do niej ten obiekt jako argument.
 
@@ -165,8 +165,95 @@ int("zombie")  # to nie zadziała
 ---
 &nbsp;
 ### 2.4 Operacje arytmetyczne
-...
+Operatory arytmetyczne - takie jak np. +, -, *, / itp. mają w Pythonie zastosowanie zgodne z tym jak działają one w kalkulatorach. Jeżel chcemy wykonać na dwóch liczbach operację arytmetyczną możemy zrobić to w bardzo intuicyjny sposób, np.:
 
+```python
+2+2
+```
+
+
+```python
+3-1
+```
+
+
+```python
+5 / 2
+```
+
+
+```python
+3 * 4
+```
+
+---
+Istnieje również kilka mniej standardowych operatorów, takich jak:
+
+```python
+8 // 3
+```
+// - który zwróci część całkowitą z wyniku dzielenia. W powyższym przykładzie 2.
+
+```python
+13 % 5
+```
+% - który zwróci resztę z dzielenia. W powyższym przykładzie 3.
+
+```python
+2 ** 3
+pow(2, 3)
+```
+**, który podobnie jak funkcja `pow` zwróci wynik podniesienia liczby do potęgi. W powyższym przykładzie 8.
+
+---
+Podczas wykonywania obliczeń obowiązuje oczywiście kolejność wykonywania działań
+
+```python
+start_x_position = 0
+x_velocity = 2
+time_unit = 1
+
+new_x_position = start_x_position + x_velocity * time_unit
+```
+
+---
+Kiedy chcemy zmienić (nadpisać) wartość zmiennej możemy zrobić to na przykład w taki sposób:
+
+```python
+time_counter = 0
+
+time_counter = time_counter + 1
+```
+
+co wydaje się być matematycznie sprzeczne, ale w rzeczywistości jest to po prostu operacja przypisania do zmiennej `time_counter` nowej wartości - o 1 większej od aktualnej wartości tej zmiennej.
+
+Istnieje również inny - skrócony - zapis tej samej operacji, który jest równoważny. Użyjemy do niego operatora += 
+
+```python
+time_counter = 0
+
+time_counter += 1
+```
+
+---
+> Operację zwiększenia wartości zmiennej o 1 nazywamy **inkrementacją** natomiast zmniejszenie wartości o 1 to **dekrementacja**. Operacje te są stosunkowo często używane w programowaniu.
+---
+
+Analogiczne operatory nadpisujące wartość zmiennej występują również dla pozostałych działań arytmetycznych. Działają one analogicznie.
+```python
+x = 10
+
+x += 2
+x -= 4.1
+x *= 1.4
+x /= 5
+```
+
+---
+**Operacje arytmetyczne - podsumowanie:**
+- Python dysponuje standardowymi operatorami arytmetycznymi (+, -, *, /) a także innymi, takimi jak //, % czy **
+- Aby zmienić wartość zmiennej należy użyć operatora przypisania, czyli =
+- Istnieją specjalne operatory (+=, -=, *=, /=) skracające zapis kiedy chcemy do zmiennej przypisać nową wartość wykonując operację wykonaną na dotychczasowej wartości
 ---
 ---
 ---
