Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -32,7 +32,7 @@ no_value = None
 ```
 
 ---
-**Podsumowanie:**
+**Definiowanie zmiennych - podsumowanie:**
 - Do utworzenia zmiennej potrzebne są: **nazwa zmiennej, znak równości oraz wartość zmiennej**. Nie musimy deklarować jej typu. Wynika to z tego, że Python jest językiem typowanym dynamicznie
 - Nazwa zmiennej może zawierać tylko litery, cyfry oraz znak _ . Nie może zaczynać się od cyfry
 - Aby utworzyć zmienną typu tekstowego (string) należy podać wartość w pojedynczych albo podwójnych cudzysłowach
@@ -89,7 +89,7 @@ round(3.1415926, 2)
 Powyższy kod zwróci wartość 3.14.
 
 ---
-**Podsumowanie:**
+**Funkcje wbudowane - podsumowanie:**
 - Funkcja to fragment kodu, który wykonuje określone zadanie podczas jej wywołania
 - Python umożliwia pisanie własnych funkcji, ale oferuje również cały szereg funkcji wbudowanych
 - Funkcja `print` służy do wypisania na ekranie przekazanej do niej wartości
@@ -155,7 +155,7 @@ int("zombie")  # to nie zadziała
 ```
 
 ---
-**Podsumowanie:**
+**Typy - podsumowanie:**
 - Każdy obiekt w Pythonie ma określony typ
 - Aby sprawdzić jaki on jest używamy funkcji `type`
 - Najczęściej spotykane typy zmiennych to: string, int, float, bool
