Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -259,8 +259,7 @@ x /= 5
 ---
 &nbsp;
 ### 2.5 Operacje na stringach
-...
-
+Podobnie jak na liczbach, tak i na stringach możemy wykonywać określone operacje
 ---
 ---
 ---
