Just another update

--- a/Python od podstaw/2. Podstawy.md
+++ b/Python od podstaw/2. Podstawy.md
@@ -254,6 +254,7 @@ x /= 5
 - Python dysponuje standardowymi operatorami arytmetycznymi (+, -, *, /) a także innymi, takimi jak //, % czy **
 - Aby zmienić wartość zmiennej należy użyć operatora przypisania, czyli =
 - Istnieją specjalne operatory (+=, -=, *=, /=) skracające zapis kiedy chcemy do zmiennej przypisać nową wartość wykonując operację wykonaną na dotychczasowej wartości
+- Zwiększenie wartości zmiennej o 1 nazywamy **inkrementacją**. Zmniejszenie jej o 1 nazywamy **dekrementacją**
 ---
 ---
 ---
